[package]
name = "Hydroxite"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.26.2", features = ["default_fonts", "glow"] }
egui = "0.26.2"
egui_extras = { version = "0.26.2", features = ["image"] }
rfd = "0.13.0"
syntect = "5.1.0"
walkdir = "2.3.3"
image = { version = "0.24", features = ["png"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef"] }