[package]
name = "Hydroxite"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.26.2", features = ["default_fonts", "glow"] }
egui = "0.26.2"
egui_extras = { version = "0.26.2", features = ["image"] }
rfd = "0.13.0"
syntect = "5.1.0"
walkdir = "2.3.3"
image = { version = "0.24", features = ["png"] }
# i want to fricking die
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"
core-graphics = "0.22.2"
core-foundation = "0.9.3"
